@@ -32,6 +32,7 @@
  * Added support for KPATH_VALUE(ClassName) in custom queries. <==== TODO: Document
  * Fixed class scoping Contact? when current node is more specialized.
  * Fixed bug on syntax error in Acl query.
+ * Fixed cache expire bug (some pages were not properly removed).
 
 == 1.2.0, 1.2.1 2012-05-01
 
